Adjust styles, add simple todo

--- a/views/skills.html
+++ b/views/skills.html
@@ -1,63 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Skills Development</title>
-  <link rel="stylesheet" href="../styles/header-footer.css">
-  <script type="module" src="../web-components/my-footer.js"></script>
-</head>
-<body>
-  <header>
-    <div class="img-wrapper">
-      <a href="../../index.html"><img src="/assets/images/standing_on_chair.JPG" alt=""></a>
-    </div>
-    <div class="hero">
-      <h1>Skills Development</h1>
-    </div>
-  </header>
-  <div class="container">
-    <div class="page-content">
-      <p class="link">Taken from <a href="https://github.com/fs-webdev/skill-building-program">Family Search Skill Building Program</a></p>
-    
-      <h2 class='skills-title'>HTML5</h2>
-      <div class='skills-box'>
-        <div class='link'><a href="html5/apprentice.html">Apprentice</a></div>
-        <div class='link'><a href="">Journeyman</a></div>
-        <div class='link'><a href="">Master</a></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Skills Development</title>
+    <link rel="stylesheet" href="../styles/header-footer.css" />
+    <script type="module" src="../web-components/my-footer.js"></script>
+    <style>
+      .page-content {
+        display: flex;
+        justify-content: center;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <div class="hero">
+        <h1>Skills Development</h1>
       </div>
+    </header>
+    <div class="container">
+      <div class="img-wrapper">
+        <a href="../../index.html"
+          ><img src="/assets/images/standing_on_chair.JPG" alt=""
+        /></a>
+      </div>
+      <div class="page-content">
+        <div class="group">
+          <p class="link">
+            Taken from
+            <a href="https://github.com/fs-webdev/skill-building-program"
+              >Family Search Skill Building Program</a
+            >
+          </p>
 
-      <h2 class='skills-title'>CSS</h2>
-      <div class='skills-box'>
-        <div class='link'><a href="css/apprentice.html">Apprentice</a></div>
-        <div class='link'><a href="">Journeyman</a></div>
-        <div class='link'><a href="">Master</a></div>
-      </div>
-    
-      <h2 class='skills-title'>JavaScript</h2>
-      <div class='skills-box'>
-        <div class='link'><a href="javascript/apprentice.html">Apprentice</a></div>
-        <div class='link'><a href="">Journeyman</a></div>
-        <div class='link'><a href="">Master</a></div>
-      </div>
-    
-      <h2 class='skills-title'>Performance</h2>
-      <div class='skills-box'>
-        <div class='link'><a href="">Apprentice</a></div>
-        <div class='link'><a href="">Journeyman</a></div>
-        <div class='link'><a href="">Master</a></div>
-      </div>
-    
-      <h2 class='skills-title'>Web Components</h2>
-      <div class='skills-box'>
-        <div class='link'><a href="wc/apprentice">Apprentice</a></div>
-        <div class='link'><a href="">Journeyman</a></div>
-        <div class='link'><a href="">Master</a></div>
+          <h2 class="skills-title">HTML5</h2>
+          <div class="skills-box">
+            <div class="link">
+              <a href="html5/apprentice.html">Apprentice</a>
+            </div>
+            <div class="link"><a href="">Journeyman</a></div>
+            <div class="link"><a href="">Master</a></div>
+          </div>
+
+          <h2 class="skills-title">CSS</h2>
+          <div class="skills-box">
+            <div class="link"><a href="css/apprentice.html">Apprentice</a></div>
+            <div class="link"><a href="">Journeyman</a></div>
+            <div class="link"><a href="">Master</a></div>
+          </div>
+
+          <h2 class="skills-title">JavaScript</h2>
+          <div class="skills-box">
+            <div class="link">
+              <a href="javascript/apprentice.html">Apprentice</a>
+            </div>
+            <div class="link"><a href="">Journeyman</a></div>
+            <div class="link"><a href="">Master</a></div>
+          </div>
+
+          <h2 class="skills-title">Performance</h2>
+          <div class="skills-box">
+            <div class="link"><a href="">Apprentice</a></div>
+            <div class="link"><a href="">Journeyman</a></div>
+            <div class="link"><a href="">Master</a></div>
+          </div>
+
+          <h2 class="skills-title">Web Components</h2>
+          <div class="skills-box">
+            <div class="link"><a href="wc/apprentice">Apprentice</a></div>
+            <div class="link"><a href="">Journeyman</a></div>
+            <div class="link"><a href="">Master</a></div>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
 
-  <my-footer></my-footer>
-</body>
+    <my-footer></my-footer>
+  </body>
 </html>
