--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -5,9 +5,8 @@ body {
 }
 
 .img-wrapper {
-  position: absolute;
-  top: 16px;
-  left: 50px;
+  position: relative;
+  top: -80px;
 }
 .img-wrapper img {
   height: 100px;
@@ -40,7 +39,8 @@ body {
   color: inherit;
 }
 
-h1, h2 {
+h1,
+h2 {
   color: #4caf50;
 }
 
@@ -77,7 +77,7 @@ h1, h2 {
 
 footer {
   width: 100%;
-  background-color: #14181C;
+  background-color: #14181c;
   color: white;
 }
 
@@ -94,7 +94,6 @@ footer .link a:visited {
     flex-wrap: wrap;
   }
   .column {
-    width: 150px;
     margin-bottom: 40px;
   }
 }
