--- a/views/skills.html
+++ b/views/skills.html
@@ -11,6 +11,7 @@
       .page-content {
         display: flex;
         justify-content: center;
+        margin-top: -40px;
       }
     </style>
   </head>
