--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -67,6 +67,12 @@ h2 {
   padding: 10px 0px;
 }
 
+h3.link {
+  text-transform: uppercase;
+  font-weight: normal;
+  font-size: 1em;
+}
+
 .link a {
   text-decoration: none;
 }
