--- a/views/css/apprentice.html
+++ b/views/css/apprentice.html
@@ -47,6 +47,25 @@
     .funnel {
       text-align: center;
     }
+
+    li {
+      list-style: none;
+    }
+    li::before {
+      content: '✅ ';
+    }
+
+    #rockingBoat {
+      animation-name: rocking;
+      animation-duration: 3s;
+      animation-iteration-count: infinite;
+      animation-direction: alternate;
+    }
+
+    @keyframes rocking{
+      from {transform: rotate(-30deg)}
+      to {transform: rotate(30deg)}
+    }
   </style>
 </head>
 <body>
@@ -55,11 +74,21 @@
       <h1>CSS Apprentice</h1>
     </div>
   </header>
+
   <main class="container" role="main">
     <div class="img-wrapper">
       <a href="../../index.html"><img src="/assets/images/standing_on_chair.JPG" alt=""></a>
     </div>
-    <h1>2 features from "Latest Stable CSS"</h1>
+    <h1>Requirements</h1>
+    <ul>
+      <li>2 of the features from "Latest Stable CSS"</li>
+      <li>2 of the features from "Testing" status section</li>
+      <!-- <li>2 of the features in the "Revising" section of w3 CSS - Current work</li> -->
+      <li>2 of the features in the "Refining" section of w3 CSS - Current work</li>
+      <!-- <li>2 of the features in the "Exploring" section of w3 CSS - Current work</li> -->
+    </ul>
+
+    <h2>2 features from "Latest Stable CSS"</h2>
     
     <h3>Multi-Column layout</h3>
     <div id="columns">
@@ -79,7 +108,7 @@
         The background properties are not inherited, but the parent box’s background will shine through by default because of the initial transparent value on background-color.
     </div>
 
-    <h1>2 features from "Testing" status section</h1>
+    <h2>2 features from "Testing" status section</h2>
 
     <h3>CSS Masking</h3>
     <img class="clip" src="images/water.jpg" alt="">
@@ -96,8 +125,32 @@
       </p>
     </div>
 
+    <h2>2 features from "Refining"</h2>
+    <h3>Transforms Level 1</h3>
+    <svg id="boat" enable-background="new 0 0 256 256" height="512" viewBox="0 0 256 256" width="512" xmlns="http://www.w3.org/2000/svg"><path d="m159.604 203.385-117.348 5.615-.537-1.51c-.038.008-.076.016-.113.024l2.995 7.486h115.003c14.596 0 28.464-6.378 37.963-17.46l21.034-24.54s-44.401 30.385-58.997 30.385z" fill="#e8383b"/><path d="m40.578 204.279 112.679-9.953c2.455-.217 4.876-.729 7.209-1.523l58.135-19.803-181.202 24z" fill="#ef7f72"/><path d="m153.257 194.327-112.679 9.953 1.678 4.72 117.348-5.615c14.596 0 58.997-30.385 58.997-30.385l-58.135 19.804c-2.334.794-4.754 1.305-7.209 1.523z" fill="#e95947"/><path d="m159.604 218h-115.003c-1.227 0-2.33-.747-2.785-1.886l-7.201-18c-.344-.859-.272-1.83.196-2.629.467-.799 1.278-1.338 2.195-1.459l181.201-24c1.233-.167 2.438.45 3.031 1.543.593 1.094.45 2.438-.359 3.383l-21.034 24.54c-10.082 11.762-24.749 18.508-40.241 18.508zm-112.973-6h112.973c13.738 0 26.745-5.982 35.685-16.412l15.928-18.584-169.6 22.464z" fill="#1c2d6b"/><path d="m110.035 190.38c-1.657 0-3-1.343-3-3v-146.38c0-1.657 1.343-3 3-3s3 1.343 3 3v146.38c0 1.657-1.343 3-3 3z" fill="#1c2d6b"/><path d="m139.479 126.611c-3.94-18.362-19.091-43.146-26.089-55.63 4.246 10.441 8.645 29.03 8.645 48.019 0 28.441-4.887 51.73-11.088 53.829l26.395-4.949c3.285-7.055 6.455-21.15 2.137-41.269z" fill="#419b46"/><path d="m206.035 155-96-90.599 64.956 96.42z" fill="#a4d4a0"/><path d="m113.391 70.981c-1.161-2.854-2.31-5.104-3.355-6.581.479 1.325 1.687 3.608 3.355 6.581z" fill="#65bc49"/><path d="m110.035 64.401c1.045 1.477 2.195 3.727 3.355 6.581 6.998 12.484 22.149 37.268 26.089 55.63 4.317 20.119 1.147 34.214-2.138 41.269l37.649-7.059z" fill="#65bc49"/><path d="m110.944 175.829c-1.34 0-2.549-.9-2.9-2.241-.398-1.523.449-3.096 1.94-3.601 3.248-1.099 9.05-19.077 9.05-50.987 0-24.425-7.34-47.058-11.449-52.866-.89-1.258-.682-2.987.482-3.998 1.164-1.01 2.905-.976 4.026.084l96 90.599c.821.774 1.137 1.944.819 3.026-.318 1.083-1.216 1.896-2.326 2.104l-95.086 17.828c-.187.035-.373.052-.556.052zm7.627-99.247c.779 2.472 1.521 5.132 2.204 7.919 1.944 7.938 4.261 20.366 4.261 34.499 0 14.695-1.587 37.638-6.861 49.422l81.517-15.284z" fill="#1c2d6b"/><path d="m106.923 70.397s-.003.009-.005.011c.167-.399.333-.785.499-1.158l-59.24 109.75 16.595-1.68 25.076-67.077z" fill="#ede49d"/><path d="m98.035 119c0-17.136 3.582-33.942 7.402-44.734-4.367 11.559-16.971 46.301-18.607 66.414-2.307 28.346.573 34.348.574 34.349l21.72-2.199c-6.202-2.1-11.089-25.389-11.089-53.83z" fill="#d3ba2a"/><path d="m106.918 70.408c-.493 1.179-.989 2.467-1.481 3.858.9-2.38 1.448-3.774 1.481-3.858z" fill="#eee045"/><path d="m89.848 110.243-25.076 67.077 22.632-2.292s-2.88-6.001-.574-34.349c1.637-20.112 14.24-54.854 18.607-66.414.492-1.391.988-2.679 1.481-3.858.001-.002.005-.011.005-.011z" fill="#eee045"/><path d="m48.177 182c-.996 0-1.935-.496-2.495-1.335-.616-.924-.672-2.112-.145-3.09l59.167-109.614c.967-2.164 1.94-3.961 2.881-5.292.917-1.295 2.684-1.654 4.031-.816 1.348.836 1.812 2.578 1.059 3.974l-2.525 4.678c-4.067 9.217-9.115 28.241-9.115 48.496 0 31.91 5.802 49.889 9.05 50.987 1.337.453 2.178 1.776 2.019 3.18-.159 1.402-1.274 2.505-2.679 2.646l-60.946 6.171c-.101.01-.202.015-.302.015zm49.038-87.533-43.71 80.979 49.395-5.001c-6.079-10.985-7.865-35.854-7.865-51.444 0-9.143.97-17.572 2.18-24.534z" fill="#1c2d6b"/><path d="m80.035 65 17.011-3.402 3.711-13.176z" fill="#89aadb"/><path d="m110.035 41-7.187 5.75v13.688l7.187-1.438z" fill="#4b67b0"/><path d="m100.757 48.422-3.711 13.176 5.802-1.16v-13.688z" fill="#6287c5"/><path d="m80.034 68c-1.148 0-2.219-.661-2.718-1.732-.584-1.255-.235-2.746.845-3.61l30-24c.901-.719 2.134-.859 3.174-.361 1.039.5 1.7 1.551 1.7 2.704v18c0 1.43-1.009 2.661-2.412 2.941l-30 6c-.197.039-.394.058-.589.058zm27.001-20.758-15.498 12.399 15.498-3.1z" fill="#1c2d6b"/></svg>
 
+    <h3>Animations</h3>
+    <svg id="rockingBoat" enable-background="new 0 0 256 256" height="512" viewBox="0 0 256 256" width="512" xmlns="http://www.w3.org/2000/svg"><path d="m159.604 203.385-117.348 5.615-.537-1.51c-.038.008-.076.016-.113.024l2.995 7.486h115.003c14.596 0 28.464-6.378 37.963-17.46l21.034-24.54s-44.401 30.385-58.997 30.385z" fill="#e8383b"/><path d="m40.578 204.279 112.679-9.953c2.455-.217 4.876-.729 7.209-1.523l58.135-19.803-181.202 24z" fill="#ef7f72"/><path d="m153.257 194.327-112.679 9.953 1.678 4.72 117.348-5.615c14.596 0 58.997-30.385 58.997-30.385l-58.135 19.804c-2.334.794-4.754 1.305-7.209 1.523z" fill="#e95947"/><path d="m159.604 218h-115.003c-1.227 0-2.33-.747-2.785-1.886l-7.201-18c-.344-.859-.272-1.83.196-2.629.467-.799 1.278-1.338 2.195-1.459l181.201-24c1.233-.167 2.438.45 3.031 1.543.593 1.094.45 2.438-.359 3.383l-21.034 24.54c-10.082 11.762-24.749 18.508-40.241 18.508zm-112.973-6h112.973c13.738 0 26.745-5.982 35.685-16.412l15.928-18.584-169.6 22.464z" fill="#1c2d6b"/><path d="m110.035 190.38c-1.657 0-3-1.343-3-3v-146.38c0-1.657 1.343-3 3-3s3 1.343 3 3v146.38c0 1.657-1.343 3-3 3z" fill="#1c2d6b"/><path d="m139.479 126.611c-3.94-18.362-19.091-43.146-26.089-55.63 4.246 10.441 8.645 29.03 8.645 48.019 0 28.441-4.887 51.73-11.088 53.829l26.395-4.949c3.285-7.055 6.455-21.15 2.137-41.269z" fill="#419b46"/><path d="m206.035 155-96-90.599 64.956 96.42z" fill="#a4d4a0"/><path d="m113.391 70.981c-1.161-2.854-2.31-5.104-3.355-6.581.479 1.325 1.687 3.608 3.355 6.581z" fill="#65bc49"/><path d="m110.035 64.401c1.045 1.477 2.195 3.727 3.355 6.581 6.998 12.484 22.149 37.268 26.089 55.63 4.317 20.119 1.147 34.214-2.138 41.269l37.649-7.059z" fill="#65bc49"/><path d="m110.944 175.829c-1.34 0-2.549-.9-2.9-2.241-.398-1.523.449-3.096 1.94-3.601 3.248-1.099 9.05-19.077 9.05-50.987 0-24.425-7.34-47.058-11.449-52.866-.89-1.258-.682-2.987.482-3.998 1.164-1.01 2.905-.976 4.026.084l96 90.599c.821.774 1.137 1.944.819 3.026-.318 1.083-1.216 1.896-2.326 2.104l-95.086 17.828c-.187.035-.373.052-.556.052zm7.627-99.247c.779 2.472 1.521 5.132 2.204 7.919 1.944 7.938 4.261 20.366 4.261 34.499 0 14.695-1.587 37.638-6.861 49.422l81.517-15.284z" fill="#1c2d6b"/><path d="m106.923 70.397s-.003.009-.005.011c.167-.399.333-.785.499-1.158l-59.24 109.75 16.595-1.68 25.076-67.077z" fill="#ede49d"/><path d="m98.035 119c0-17.136 3.582-33.942 7.402-44.734-4.367 11.559-16.971 46.301-18.607 66.414-2.307 28.346.573 34.348.574 34.349l21.72-2.199c-6.202-2.1-11.089-25.389-11.089-53.83z" fill="#d3ba2a"/><path d="m106.918 70.408c-.493 1.179-.989 2.467-1.481 3.858.9-2.38 1.448-3.774 1.481-3.858z" fill="#eee045"/><path d="m89.848 110.243-25.076 67.077 22.632-2.292s-2.88-6.001-.574-34.349c1.637-20.112 14.24-54.854 18.607-66.414.492-1.391.988-2.679 1.481-3.858.001-.002.005-.011.005-.011z" fill="#eee045"/><path d="m48.177 182c-.996 0-1.935-.496-2.495-1.335-.616-.924-.672-2.112-.145-3.09l59.167-109.614c.967-2.164 1.94-3.961 2.881-5.292.917-1.295 2.684-1.654 4.031-.816 1.348.836 1.812 2.578 1.059 3.974l-2.525 4.678c-4.067 9.217-9.115 28.241-9.115 48.496 0 31.91 5.802 49.889 9.05 50.987 1.337.453 2.178 1.776 2.019 3.18-.159 1.402-1.274 2.505-2.679 2.646l-60.946 6.171c-.101.01-.202.015-.302.015zm49.038-87.533-43.71 80.979 49.395-5.001c-6.079-10.985-7.865-35.854-7.865-51.444 0-9.143.97-17.572 2.18-24.534z" fill="#1c2d6b"/><path d="m80.035 65 17.011-3.402 3.711-13.176z" fill="#89aadb"/><path d="m110.035 41-7.187 5.75v13.688l7.187-1.438z" fill="#4b67b0"/><path d="m100.757 48.422-3.711 13.176 5.802-1.16v-13.688z" fill="#6287c5"/><path d="m80.034 68c-1.148 0-2.219-.661-2.718-1.732-.584-1.255-.235-2.746.845-3.61l30-24c.901-.719 2.134-.859 3.174-.361 1.039.5 1.7 1.551 1.7 2.704v18c0 1.43-1.009 2.661-2.412 2.941l-30 6c-.197.039-.394.058-.589.058zm27.001-20.758-15.498 12.399 15.498-3.1z" fill="#1c2d6b"/></svg>
+
+    <h2>2 features from "Revising"</h2>
+    <h3>Overflow</h3>
+    <div style="height: 40px; width: 400px; padding: 10px; border: 2px solid black; background-color: red; overflow-x: scroll">
+      <div style="width: 1000px; background-color: white;">
+        This is a demonstration of overflow-x in an area of a web page that has horizontal scrolling due to text content that runs outside of the parent container
+      </div>
+    </div>
     
   </main>
   <my-footer></my-footer>
+  <script>
+    const boat = document.getElementById('boat');
+
+    window.onscroll = e => {
+      const totalHeight = document.body.scrollHeight;
+      const windowHeight = window.innerHeight;
+      
+      const scrollPercent = (window.scrollY * 100) / totalHeight;
+      boat.style.transform = 'translateX('+scrollPercent + '%)';
+    }
+  </script>
 </body>
